--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -25,7 +25,26 @@
 }
 
 .button-secondary {
+  border: 2px $green solid;
+  background-color: $white;
+  color: $green;
+  font-size: 16px;
+  padding: 10px;
   transition: .5s;
+  display: inline-block;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.25);
+  -moz-box-shadow: 2px 2px 2px rgba(0,0,0,.25);
+  -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,.25);
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  font-weight: bold;
+  margin-left: 5px;
+
+  &:hover {
+    background-color: $green;
+    color: $white;
+  }
 }
 
 .button-row {
