--- a/app/views/characters/wizard_challenges_advantages.slim
+++ b/app/views/characters/wizard_challenges_advantages.slim
@@ -68,7 +68,7 @@
   = f.hidden_field :id
 
   .button-row
-    = hidden_field_tag "form-action", "", id: 'form-action'
+    = hidden_field_tag "formaction", "", id: 'form-action'
     = f.submit "Back", id: 'back'
     = f.submit "Save", id: 'save'
     = f.submit "Finish", id: 'finish'
