add proper formatting for logout button

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -161,7 +161,7 @@ header {
 
         > li {
           margin: 0;
-          > a, > span {
+          > a, > span, > form {
             height: auto;
             line-height: 1.2;
             display: block;
