add TOC to skills and special trainings

--- a/app/views/characters/wizard_skills_trainings.slim
+++ b/app/views/characters/wizard_skills_trainings.slim
@@ -2,6 +2,8 @@
 
   h2 Character Creation Wizard: #{@character.name}
 
+  = render partial: 'wizard_toc'
+
   h3 Skills & Special Trainings
 
   .flex-container
