--- a/app/assets/stylesheets/pages/questionnaire.scss
+++ b/app/assets/stylesheets/pages/questionnaire.scss
@@ -2,6 +2,7 @@
   float: right;
   border: 1px $black solid;
   padding: 0 20px 20px;
+  margin-bottom: 20px;
   width: 250px;
 
   .title {
@@ -16,5 +17,10 @@
   ol {
     list-style: decimal;
     padding-left: 25px;
+  }
+
+  @media only screen and (max-width: $medium-media-query-size) {
+    float: none;
+    margin-top: 20px;
   }
 }
