more clearly indicate current TOC item

--- a/app/assets/stylesheets/pages/questionnaire.scss
+++ b/app/assets/stylesheets/pages/questionnaire.scss
@@ -17,6 +17,10 @@
   ol {
     list-style: decimal;
     padding-left: 25px;
+
+    a.current {
+      font-weight: bold;
+    }
   }
 
   @media only screen and (max-width: $medium-media-query-size) {
