--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -235,7 +235,17 @@ ul#challenges-list, ul#advantages-list {
   h4 {
     margin-bottom: 16px;
 
+    &:after {
+      content: "+";
+      margin-left: 12px;
+      font-size: 18px;
+    }
+
     &.open {
+
+      &:after {
+        content: "-";
+      }
 
     }
   }
