--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <nav>
       <ul>
         <% if current_user %>
-          <li class="parent"><span>My Characters</span>
+          <li class="parent"><%= link_to "My Characters", root_path %>
             <ul class="sub-menu">
                 <% current_user.characters.each do |character| %>
                   <li><%= link_to character.name, character_path(character) %></li>
