add bottom margin, remove debug statements

--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -67,6 +67,11 @@
       }
     }
   }
+
+  .public-blurb {
+    max-width: 50em;
+    margin-bottom: 24px;
+  }
 }
 
 @media (max-width:$small-media-query-size) {
