--- a/app/assets/stylesheets/utilities/_colors.scss
+++ b/app/assets/stylesheets/utilities/_colors.scss
@@ -5,5 +5,7 @@ $black: #333333;
 $dirty-polaroid: #f0efe8;
 $ash-grey: #aebfaf;
 
+$red: #7a5b5b;
+
 $primary-color: $green;
 $hamburger-layer-color: $white;
