--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -41,13 +41,17 @@
                   span.dot
                     = f.radio_button val.parameterize("_").to_sym, i, label: false
 
-  h3.section Skills and Special Training
+  h3.section
+    | Skills and Special Training
+    span.counter#skills-total 22 Remaining
 
   .flex-container.skills-training
     - @skills_training.each do |cat,vals|
       div class="column #{cat.to_s.parameterize}"
         strong
           = cat
+          - if cat.to_s == "Special Training"
+            span.counter#special-training 8 Remaining
         - vals.each do |val|
           .row
             label
@@ -63,7 +67,9 @@
                   span.dot
                     = f.radio_button val.parameterize("_").to_sym, i, label: false
 
-  h3.section Advantages
+  h3.section
+    | Advantages
+    span.counter#advantage-count 17 Remaining
   .form-row
     select name="advantages" id="advantages"
       - @advantages.each do |advantage|
@@ -85,7 +91,9 @@
         = link_to "<i class='fa fa-edit'></i>".html_safe, "#", class: 'advantage-edit'
         = link_to "<i class='fa fa-minus-circle'></i>".html_safe, "#", class: 'advantage-delete'
 
-  h3.section Challenges
+  h3.section
+    | Challenges
+    span.counter#challenge-count
   .form-row
     div
       = label_tag "Creature Challenges"
