--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -1,6 +1,6 @@
 .character
   .button-row.right
-    = link_to "Edit in Wizard", @character.id.present? ? character_wizard_path(@character) : new_character_wizard_path, class: 'button'
+    = link_to "Edit in Wizard", @character.id.present? ? character_wizard_page_path(@character, 1) : new_character_wizard_path, class: 'button'
 
   .form-row.basic-stats
     .stat.name
