Add counter to wizard page

--- a/app/views/characters/wizard_basics.slim
+++ b/app/views/characters/wizard_basics.slim
@@ -22,6 +22,7 @@
         .column
           strong
             = cat
+            span.counter.hidden id="#{cat.to_s.parameterize}-count"
           - vals.each do |val|
             .row
               label
