--- a/app/views/characters/wizard_challenges_advantages.slim
+++ b/app/views/characters/wizard_challenges_advantages.slim
@@ -32,7 +32,9 @@
 
     h3.section
       | Challenges
-      span.counter#challenge-count
+      .counters
+        span.counter#challenge-count 2 Remaining
+        span.counter#creature-challenge-count 1 Creature Challenge Remaining
 
     div
       = label_tag "Creature Challenges"
