--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -94,7 +94,9 @@
 
   h3.section
     | Challenges
-    span.counter#challenge-count
+    .counters
+      span.counter#challenge-count 2 Remaining
+      span.counter#creature-challenge-count 1 Remaining
   .form-row
     div
       = label_tag "Creature Challenges"
@@ -129,6 +131,7 @@
         = hidden_field_tag "character[character_has_challenges][][challenge_id]", challenge.challenge.id
         = hidden_field_tag "character[character_has_challenges][][custom_name]", challenge.custom_name
         = hidden_field_tag "character[character_has_challenges][][custom_description]", challenge.custom_description
+        = hidden_field_tag "character[character_has_challenges][][is_creature_challenge]", challenge.is_creature_challenge
 
   - if current_user.is_storyteller || @character.status == 3
     h3.section Derived Stats
