--- a/app/views/characters/index.slim
+++ b/app/views/characters/index.slim
@@ -16,6 +16,7 @@
         th Status
         th
         th
+        th
     tbody
       - @characters.each do |character|
         tr
@@ -27,6 +28,9 @@
           td
             - if character.status == 0 or current_user.is_storyteller
               = character.get_status
+          td
+            - if character.status == 2
+              = link_to "Downtime Actions", character_downtime_actions_path(character)
           td
             - unless character.status > 0 and !current_user.is_storyteller
               = link_to "Edit", edit_character_path(character)
