--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -4,6 +4,10 @@ ul
   li
     = link_to "Print Character Sheets", characters_print_path, target: '_blank'
   li
+    = link_to "Games", storytellers_games_path
+  li
+    = link_to "Downtime Actions", storytellers_downtime_actions_path
+  li
     = link_to "Advantages", storytellers_advantages_path
   li
     = link_to "Challenges", storytellers_challenges_path
