Add unnatural stuff to advantages

--- a/app/views/storytellers/advantages/_form.slim
+++ b/app/views/storytellers/advantages/_form.slim
@@ -39,5 +39,9 @@
     = f.label :requires_specification, "Requires specification?"
     = f.check_box :requires_specification
 
+  .form-row
+    = f.label :is_unnatural, "Unnatural?"
+    = f.check_box :is_unnatural
+
   .button-row
     = f.submit "Save", class: 'button'
