--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -63,7 +63,7 @@
 
           <p>You can confirm your account email through the link below:</p>
 
-          <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+          <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token, :host => 'characters.askagainlater.com') %></p>
         </td>
       </tr>
     </table>
