Ensure that styling in ST markdown fields is correct.

--- a/app/views/storytellers/advantages/show.slim
+++ b/app/views/storytellers/advantages/show.slim
@@ -13,7 +13,7 @@ p
     strong Prerequisites:
     = @advantage.prerequisites
 
-div.description
+div.st-description
   = raw @markdown.render(@advantage.description)
 
   .button-row
