--- a/app/views/storytellers/true_selves/show.slim
+++ b/app/views/storytellers/true_selves/show.slim
@@ -4,7 +4,7 @@
 h2
   = "True Self: #{@true_self.name}"
 
-.description
+.st-description
   = raw @markdown.render(@true_self.description)
 
 .button-row
