--- a/app/views/storytellers/challenges/show.slim
+++ b/app/views/storytellers/challenges/show.slim
@@ -4,7 +4,7 @@
 h2
   = "Challenge: #{@challenge.name}"
 
-.description
+.st-description
   = raw @markdown.render(@challenge.description)
 
 .button-row
