Style paragraphs and uls in character answers.

--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -338,6 +338,15 @@ ul#advantages, ul#challenges {
 
   .question-answer {
     margin-bottom: 36px;
+
+    p {
+      margin: 1em 0;
+    }
+
+    ul {
+      list-style: disc;
+      margin-left: 24px;
+    }
   }
 }
 
