don't show errors and also add attributes class to attributes in wizard so that it'll validate

--- a/app/views/characters/wizard_basics.slim
+++ b/app/views/characters/wizard_basics.slim
@@ -17,7 +17,7 @@
 
     h3 Attributes
 
-    .flex-container
+    .flex-container.attributes
       - @attributes.each do |cat,vals|
         .column
           strong
