--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -18,6 +18,12 @@
     }
   }
 
+  p.instructions, .instructions p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    max-width: 50em;
+  }
+
   span.counter {
     position: absolute;
     left: calc(100% + 10px);
