--- a/app/views/characters/wizard_challenges_advantages.slim
+++ b/app/views/characters/wizard_challenges_advantages.slim
@@ -30,6 +30,8 @@
           = link_to "<i class='fa fa-edit'></i>".html_safe, "#", class: 'advantage-edit'
           = link_to "<i class='fa fa-minus-circle'></i>".html_safe, "#", class: 'advantage-delete'
 
+    p.instructions Characters begin game with 17 ranks worth of total #{link_to("Advantages", "http://askagainlater.com/rules/advantages/", rel: "external", target: "_blank")}, split among any number of individual Advantages. Many Advantages have specific prerequisites which need to be fulfilled before they can be purchased by a character. Some Advantages are labeled as "Unnatural," this is to show that the Advantage in question gives your character a weird or supernatural ability.
+
     h3.section
       | Challenges
       .counters
@@ -69,6 +71,9 @@
           = hidden_field_tag "character[character_has_challenges][][challenge_id]", challenge.challenge.id
           = hidden_field_tag "character[character_has_challenges][][custom_name]", challenge.custom_name
           = hidden_field_tag "character[character_has_challenges][][custom_description]", challenge.custom_description
+
+    p.instructions Characters can have zero, one, or two #{link_to("Challenges", "http://askagainlater.com/rules/challenges/", rel: "external", target: "_blank")} at character creation. Additionally, you do not select from a list of prewritten Challenges. Instead, you will submit a description of the Challenge in no more than 4 sentences and the Storytellers will build a personalized Challenge for the character in cooperation with you (mechanics and all).
+    p.instructions Note that Challenges should be tailored to fit your character’s personal situation, that is, they should represent some aspect of your character not covered by other mechanics. The one exception to this are the Creature Challenges, which have prewritten mechanics. Please see the Challenges page for more information.
 
     = hidden_field_tag "wizard_current", "challenges_advantages"
     = hidden_field_tag "wizard_prev", "skills_trainings"
