--- a/app/views/storytellers/downtime_periods/index.slim
+++ b/app/views/storytellers/downtime_periods/index.slim
@@ -1,35 +1,28 @@
-h2 Games
+h2 Downtime Periods
 
 .button-row.right
-  = link_to "New Game", new_storytellers_game_path, class: 'button'
+  = link_to "New Downtime Period", new_storytellers_downtime_period_path, class: 'button'
 
-p
-  em You can drag and drop rows to re-order games.
-
-= form_tag(storytellers_reorder_games_path, method: 'POST', class: 'reorder-form') do
-  table
-    thead
-      tr
-        th Title
-        th Order
-        th
-        th
-    tbody
-      - if @games.present?
-        - @games.each do |game|
-          tr
-            td
-              = link_to game.title, storytellers_questionnaire_game_path(game)
-            td
-              span.order
-                = game.order
-              = hidden_field_tag "questionnaire_game[][id]", game.id
-              = hidden_field_tag "questionnaire_game[][order]", game.order, class: 'order-field'
-            td
-              = link_to "Edit", edit_storytellers_questionnaire_game_path(game)
-            td
-              = form_tag(storytellers_game_path(game), method: 'DELETE') do
-                = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this game? This will also delete all the downtime actions for this game.");', class: 'button-text'
-
-  .button-row
-    = submit_tag "Save Ordering", id: 'save-order'
+table.table
+  thead
+    tr
+      th Title
+      th Downtimes Open?
+      th Downtimes Visible?
+      th
+      th
+  tbody
+    - if @downtime_periods.present?
+      - @downtime_periods.each do |downtime_period|
+        tr
+          td
+            = link_to downtime_period.title, storytellers_downtime_period_path(downtime_period)
+          td
+            = downtime_period.downtimes_open ? 'Yes' : 'No'
+          td
+            = downtime_period.downtimes_visible ? 'Yes' : 'No'
+          td
+            = link_to "Edit", edit_storytellers_downtime_period_path(downtime_period)
+          td
+            = form_tag(storytellers_downtime_period_path(downtime_period), method: 'DELETE') do
+              = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this downtime_period? This will also delete all the downtime actions for this downtime_period.");', class: 'button-text'
