--- a/app/views/downtime_actions/index.slim
+++ b/app/views/downtime_actions/index.slim
@@ -7,9 +7,13 @@ h2 #{@character.name}: Downtime Actions
 
     - if downtime_period.downtimes_open
       .button-row.right
-        = link_to "New Downtime Action", new_character_downtime_action_path, class: 'button'
-        = form_tag(submit_character_downtime_actions_path(@character))
-          = button_tag "Submit Downtime Actions", type: 'submit', class: 'button'
+        - if @character.downtime_actions.where(downtime_period_id: downtime_period.id, status: 1).present?
+          = form_tag(character_reopen_downtime_actions_path(@character, downtime_period))
+            = button_tag "Reopen Downtime Actions", type: 'submit', class: 'button'
+        - else
+          = link_to "New Downtime Action", new_character_downtime_period_downtime_action_path(@character, downtime_period), class: 'button'
+          = form_tag(character_submit_downtime_actions_path(@character, downtime_period))
+            = button_tag "Submit Downtime Actions", type: 'submit', class: 'button'
 
     - if @character.downtime_actions.where(downtime_period_id: downtime_period.id)
       table.table
@@ -22,12 +26,12 @@ h2 #{@character.name}: Downtime Actions
         tbody
           - @character.downtime_actions.where(downtime_period_id: downtime_period.id).each do |action|
             td
-              = link_to action.title, character_downtime_action_path(@character, action)
+              = link_to action.title, character_downtime_period_downtime_action_path(@character, downtime_period, action)
             td
               = action.size == 1 ? 'Large' : 'Regular'
             - if downtime_period.downtimes_open or current_user.is_storyteller
               td
-                = link_to "Edit", edit_character_downtime_action_path(@character, action)
+                = link_to "Edit", edit_character_downtime_period_downtime_action_path(@character, downtime_period, action)
               td
-                = form_tag(character_downtime_action_path(@character, action), method: 'DELETE') do
+                = form_tag(character_downtime_period_downtime_action_path(@character, downtime_period, action), method: 'DELETE') do
                   = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this downtime action?");', class: 'button-text'
