--- a/app/views/downtime_actions/index.slim
+++ b/app/views/downtime_actions/index.slim
@@ -3,35 +3,41 @@ h2 #{@character.name}: Downtime Actions
 - if @downtime_periods.present?
   - @downtime_periods.each do |downtime_period|
 
-    h3 #{downtime_period.title}
+    .downtime-section
+      h3 #{downtime_period.title}
 
-    - if downtime_period.downtimes_open
-      .button-row.right
-        - if @character.downtime_actions.where(downtime_period_id: downtime_period.id, status: 1).present?
-          = form_tag(character_reopen_downtime_actions_path(@character, downtime_period))
-            = button_tag "Reopen Downtime Actions", type: 'submit', class: 'button'
-        - else
-          = link_to "New Downtime Action", new_character_downtime_period_downtime_action_path(@character, downtime_period), class: 'button'
-          = form_tag(character_submit_downtime_actions_path(@character, downtime_period))
-            = button_tag "Submit Downtime Actions", type: 'submit', class: 'button'
+      - if downtime_period.downtimes_open
+        .button-row.right
+          - if @character.downtime_actions.where(downtime_period_id: downtime_period.id, status: 1).present?
+            = form_tag(character_reopen_downtime_actions_path(@character, downtime_period))
+              = button_tag "Reopen Downtime Actions", type: 'submit', class: 'button'
+          - else
+            = link_to "New Downtime Action", new_character_downtime_period_downtime_action_path(@character, downtime_period), class: 'button'
+            = form_tag(character_submit_downtime_actions_path(@character, downtime_period))
+              = button_tag "Submit Downtime Actions", type: 'submit', class: 'button'
 
-    - if @character.downtime_actions.where(downtime_period_id: downtime_period.id)
-      table.table
-        thead
-          th Title
-          th Size
-          - if (downtime_period.downtimes_open and @character.downtime_actions.where(downtime_period_id: downtime_period.id, status: 0).present?) or current_user.is_storyteller
-            th
-            th
-        tbody
-          - @character.downtime_actions.where(downtime_period_id: downtime_period.id).each do |action|
-            td
-              = link_to action.title, character_downtime_period_downtime_action_path(@character, downtime_period, action)
-            td
-              = action.size == 1 ? 'Large' : 'Regular'
-            - if (downtime_period.downtimes_open and action.status == 0) or current_user.is_storyteller
-              td
-                = link_to "Edit", edit_character_downtime_period_downtime_action_path(@character, downtime_period, action)
-              td
-                = form_tag(character_downtime_period_downtime_action_path(@character, downtime_period, action), method: 'DELETE') do
-                  = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this downtime action?");', class: 'button-text'
+      - if @character.downtime_actions.where(downtime_period_id: downtime_period.id)
+        - @character.downtime_actions.where(downtime_period_id: downtime_period.id).each do |action|
+          h4 #{action.title}
+          p
+            strong #{"Action Type: "}
+            = @types[action.action_type-1][0]
+          p
+            strong #{"Size: "}
+            = action.size == 1 ? 'Large' : 'Regular'
+          p
+            strong #{"Assets: "}
+            = action.assets
+          p
+            strong #{"Burning down life? "}
+            = action.burn ? 'Yes' : 'No'
+          .action-description
+            = action.description
+          - if downtime_period.downtimes_visible
+            .action-response
+              = action.response
+          - if (downtime_period.downtimes_open and action.status == 0) or current_user.is_storyteller
+            .button-row
+              = link_to "Edit", edit_character_downtime_period_downtime_action_path(@character, downtime_period, action)
+              = form_tag(character_downtime_period_downtime_action_path(@character, downtime_period, action), method: 'DELETE') do
+                = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this downtime action?");', class: 'button-text'
