--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -54,7 +54,7 @@
   margin: 20px 0;
   width: 100%;
 
-  .button, input[type="submit"] {
+  > * {
     margin-right: 20px;
     margin-left: 0;
     flex-shrink: 0;
@@ -63,7 +63,7 @@
   &.right {
     justify-content: flex-end;
 
-    .button, input[type="submit"] {
+    > * {
       margin-left: 20px;
       margin-right: 0;
     }
@@ -72,7 +72,7 @@
   &.center {
     justify-content: center;
 
-    .button, input[type="submit"] {
+    > * {
       margin: 0 20px;
     }
   }
