--- a/app/assets/stylesheets/pages/devise.scss
+++ b/app/assets/stylesheets/pages/devise.scss
@@ -2,6 +2,12 @@
   max-width: none;
   background-image: url('/assets/misty-woods.jpg');
   background-size: cover;
+
+  .messages {
+    max-width: $large-media-query-size;
+    margin: 5px auto;
+    width: 100%;
+  }
 }
 
 .devise-page {
