--- a/app/assets/stylesheets/components/_flash-messages.scss
+++ b/app/assets/stylesheets/components/_flash-messages.scss
@@ -41,11 +41,11 @@
     }
 
     &.notice, &.alert {
-      background-color: #f9fbe7;
-      border-color: #827717;
+      background-color: #f5f5f5;
+      border-color: #9e9e9e;
 
       .close {
-        color: #827717;
+        color: #9e9e9e;
       }
     }
   }
