Display unnamed characters as 'Unnamed Character' in list instead of a blank

--- a/app/views/characters/index.slim
+++ b/app/views/characters/index.slim
@@ -20,7 +20,7 @@
       - @characters.each do |character|
         tr
           td
-            = link_to character.name, character_path(character)
+            = link_to character.name.present? ? character.name : "Unnamed Character", character_path(character)
           - if current_user.is_storyteller?
             td
               = character.user.name
