--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -4,7 +4,7 @@ ul
   li
     = link_to "Print Character Sheets", characters_print_path, target: '_blank'
   li
-    = link_to "Games", storytellers_games_path
+    = link_to "Downtime Periods", storytellers_downtime_periods_path
   li
     = link_to "Downtime Actions", storytellers_downtime_actions_path
   li
