Add downtime actions stylesheet, add body class based on controller, adjust button styles, add field to downtime periods

--- a/app/views/storytellers/downtime_periods/_form.slim
+++ b/app/views/storytellers/downtime_periods/_form.slim
@@ -4,6 +4,10 @@
     = f.text_field :title
 
   .form-row
+    = f.label :is_active, "Active?"
+    = f.check_box :is_active
+
+  .form-row
     = f.label :downtimes_open, "Downtimes Open?"
     = f.check_box :downtimes_open
 
