--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= controller.controller_name %>">
   <%= render partial: 'layouts/header' %>
   <div class="main<%= devise_controller? ? ' devise' : '' %>">
     <% if flash.present? %>
